--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ failed_output_folder=failed
 success_output_folder=JAV_output
 
 [proxy]
-proxy=10.168.1.254:3128
+proxy=
 #proxy=127.0.0.1:1080
 timeout=10
 retry=3
@@ -27,4 +27,4 @@ directory=
 literals=\()
 
 [movie]
-path=/root/sort/test
+path=
