解决ssl版本验证问题,配置文件proxy_enable代理开关设置

--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,10 @@ failed_output_folder=failed
 success_output_folder=JAV_output
 
 [proxy]
-proxy=
-#proxy=127.0.0.1:1080
+#0:disable 1:enable
+proxy_enable=0
+proxy=''
+#proxy=192.168.99.16:1061
 timeout=10
 retry=3
 
